[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemble-enhance"
version = "0.0.2+oye.1"
description = "Speech denoising and enhancement with deep learning"
readme = "README.md"
authors = [
    {name = "Resemble AI", email = "team@resemble.ai"},
]
urls = { Homepage = "https://github.com/oye-hearing/resemble-enhance" }
keywords = ["speech", "denoising", "enhancement"]
requires-python = ">=3.12"

# Use setuptools file-based installation of requirements
# Modules from requirements.txt for dependencies when building the wheel
dependencies = [
    "celluloid>=0.2.0",
    "deepspeed==0.18.1",
    "librosa>=0.10.1",
    "matplotlib>=3.8.1",
    "numpy>=1.26.2",
    "omegaconf>=2.3.0",
    "pandas>=2.1.3",
    "ptflops>=0.7.1.2",
    "rich>=13.7.0",
    "scipy>=1.11.4",
    "soundfile>=0.12.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "resampy==0.4.3",
    "tabulate==0.9.0",
    "gradio>=4.8.0"
]

[project.scripts]
resemble-enhance = "resemble_enhance.enhancer.__main__:main"

[tool.setuptools.packages.find]
include = ["resemble_enhance*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
line_length = 120
