[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemble-enhance-inference"
version = "1.0.2+oye"
description = "Speech denoising and enhancement - Inference only"
readme = "README.md"
authors = [
    {name = "Resemble AI", email = "team@resemble.ai"},
]
urls = { Homepage = "https://github.com/oye-hearing/resemble-enhance" }
keywords = ["speech", "denoising", "enhancement"]
requires-python = ">=3.12"

# Use setuptools file-based installation of requirements
# Modules from requirements.txt (or such a file) for dependencies when building the wheel
dynamic = ["dependencies"]

[project.scripts]
resemble-enhance = "resemble_enhance.enhancer.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
line_length = 120
